Stop dimmer overflowing onto color pickers

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
 
 .board {
   width: 546px;
-  height: 520px;
+  height: 448px;
   margin: 48px auto;
 }
 
